v0.0.1~dev
- Drop it
- Add series and movie artwork from Fanart.tv to the library
- Add series artwork from TheTVDB
- Add movie artwork from TheMovieDb